--- a/.eslintrc
+++ b/.eslintrc
@@ -23,11 +23,17 @@
         "no-param-reassign": 0,
         "jsx-a11y/media-has-caption": 0,
         "react-hooks/rules-of-hooks": 2,
-        "react-hooks/exhaustive-deps": 1,
         "no-alert": 0,
         "no-useless-constructor": 0,
         "react/jsx-props-no-spreading": 0,
-        "jsx-a11y/anchor-is-valid": 0
+        "jsx-a11y/anchor-is-valid": 0,
+        "react/react-in-jsx-scope": 0,
+        "act-hooks/exhaustive-deps": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-noninteractive-element-interactions": 0,
+        "react/no-danger": 0,
+        "react-hooks/exhaustive-deps": 0,
+        "no-unused-vars": 0
     },
     "env": {
         "browser": true,
