--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.12.0",
-    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
@@ -35,6 +34,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
@@ -42,7 +43,6 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
